--- a/Ansible/kubernetes-deployment.yml
+++ b/Ansible/kubernetes-deployment.yml
@@ -2,11 +2,10 @@
 - name: Create pods using deployment
   hosts: kubernetes
   # become: true
-  user: ubuntu
+  user: root
 
   tasks:
   - name: create a deployment
-    command: kubectl apply -f kubernetes-deploy.yml
+    command: kubectl apply -f sample-deploy.yml
 
-  - name: update deployment with new pods if image updated in docker hub
-    command: kubectl rollout restart deployment.v1.apps/kubernetes-deployment
+  
