--- a/Ansible/kubernetes-service.yml
+++ b/Ansible/kubernetes-service.yml
@@ -2,8 +2,8 @@
 - name: create service for deployment
   hosts: kubernetes
   # become: true
-  user: ubuntu
+  user: root
 
   tasks:
   - name: create a service
-    command: kubectl apply -f kubernetes-service.yml
+    command: kubectl apply -f sample-service.yml
