--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -32,7 +32,7 @@
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <scope>provided</scope>
-    </dependency>
+    </dependency> ...
 
     <dependency>
       <groupId>javax.servlet.jsp</groupId>
