--- a/Ansible/create-sample-webapp-image.yml
+++ b/Ansible/create-sample-webapp-image.yml
@@ -12,7 +12,7 @@
     command: docker tag simplewebapp rama80081/simplewebapp
 
   - name: push image on to dockerhub
-    command: docker push rama80081/sample
+    command: docker push rama80081/sample ...
 
   - name: remove docker images form ansible server
     command: docker rmi simplewebapp:latest rama80081/simplewebapp
